# mysql-8.0.30

./: .gitignore  build.sh
extra/TencentSM/TencentSM-1.7.3-2/lite/: .gitignore  CMakeLists.txt  README.md  如何加入协同.md  算法接口使用说明.md
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/Linux64/: Demo说明(Linux).md
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/Linux64/shared_library_demo/: makefile  sm_test
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/Linux64/shared_library_demo/src/: main.c
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/Linux64/static_library_demo/: makefile  sm_test
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/Linux64/static_library_demo/include/: sm.h
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/MacOS/TencentSM/TencentSM/: TencentSM.h  TencentSM.m
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/MacOS/TencentSM/TencentSM.xcodeproj/: project.pbxproj
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/MacOS/TencentSM/TencentSM.xcodeproj/xcuserdata/medivhwu.xcuserdatad/xcschemes/: xcschememanagement.plist
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/MacOS/TencentSM_Demo/TencentSM_Demo/: main.mm
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/MacOS/TencentSM_Demo/TencentSM_Demo.xcodeproj/: project.pbxproj
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/MacOS/TencentSM_Demo/TencentSM_Demo.xcodeproj/xcshareddata/xcschemes/: TencentSM_Demo.xcscheme
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/MacOS/TencentSM_Demo/TencentSM_Demo.xcodeproj/xcuserdata/medivhwu.xcuserdatad/xcschemes/: xcschememanagement.plist
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/android/TencentSMDemo/: .project
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/android/TencentSMDemo/app/: build.gradle
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/android/TencentSMDemo/app/src/main/: AndroidManifest.xml
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/android/TencentSMDemo_check/: .project
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/android/TencentSMDemo_check/app/: build.gradle
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/android/TencentSMDemo_check/app/src/main/: AndroidManifest.xml
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/android/TencentSMDemo_check/doc/: Android_interface.md  Demo使用说明.md
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/android/TencentSMDemo_check/gradle/wrapper/: gradle-wrapper.properties
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/iOS/QCLOUD_SM_DEMO/QCLOUD_SM_DEMO/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.mm
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/iOS/QCLOUD_SM_DEMO/QCLOUD_SM_DEMO.xcodeproj/: project.pbxproj
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/iOS/QCLOUD_SM_DEMO/QCLOUD_SM_DEMO.xcodeproj/xcuserdata/medivhwu.xcuserdatad/xcschemes/: xcschememanagement.plist
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/iOS/QCLOUD_SM_DEMO/QCLOUD_SM_DEMO/include/: sm.h
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/iOS/QCLOUD_SM_DEMO/QCLOUD_SM_DEMOUITests/: QCLOUD_SM_DEMOUITests.m
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/windows/TencentSMdemo/: .project
extra/TencentSM/TencentSM-1.7.3-2/lite/demo/windows/TencentSMdemo/src/com/tenpay/tencentsmdemo/: Main.java
extra/TencentSM/TencentSM-1.7.3-2/lite/gmp/include/: gmp.h
extra/TencentSM/TencentSM-1.7.3-2/lite/gmp/lib/MacOS/: libgmp.dylib
extra/TencentSM/TencentSM-1.7.3-2/lite/go/: Makefile
extra/TencentSM/TencentSM-1.7.3-2/lite/go/tencentsm/: base.go  go.mod  go.sum  sm2.go  sm3.go  sm4.go
extra/TencentSM/TencentSM-1.7.3-2/lite/go/tencentsm/demo/: main.go  test.go
extra/TencentSM/TencentSM-1.7.3-2/lite/go/tencentsm/sm2/: build.go  constants.go  sm2.go  sm2key.go
extra/TencentSM/TencentSM-1.7.3-2/lite/go/tencentsm/sm3/: build.go  constants.go  sm3.go
extra/TencentSM/TencentSM-1.7.3-2/lite/go/tencentsm/test/: sm2_test.go  sm3_test.go  sm4_test.go
extra/TencentSM/TencentSM-1.7.3-2/lite/include/: sm.h  sm4_advance.h
extra/TencentSM/TencentSM-1.7.3-2/lite/jna/: .project  pom.xml
extra/TencentSM/TencentSM-1.7.3-2/lite/jna/src/main/resources/darwin/: libTencentSM-1.7.1.dylib
extra/TencentSM/TencentSM-1.7.3-2/lite/python/: build4Linux.sh  build4MacOS.sh  sm.h  tencentsm.c  test.py  test4py3.py
extra/TencentSM/TencentSM-1.7.3-2/lite/release/mac/Release/: libTencentSM.dylib
extra/TencentSM/TencentSM-1.7.3-2/lite/release/mac/Release/libTencentSM.dylib.dSYM/Contents/: Info.plist
extra/TencentSM/TencentSM-1.7.3-2/lite/release/records/: changelist.md
extra/TencentSM/TencentSM-1.7.3-2/lite/release/records/workswx/: android_debug.7z  android_release.7z
extra/TencentSM/TencentSM-1.7.3-2/lite/source/: CMakeLists.txt  sm.c  tc_kms.c
extra/TencentSM/TencentSM-1.7.3-2/lite/source/asn1/: tc_asn1.c
extra/TencentSM/TencentSM-1.7.3-2/lite/source/common/: b64_decode.c  b64_encode.c  fmemopen.c  tc_bn.c  tc_naf.c  tc_rand.c  tc_sha1.c  tc_str.c  tc_utils.c  tlv.c
extra/TencentSM/TencentSM-1.7.3-2/lite/source/hmac/: CMakeLists.txt  hmac_sm3.c
extra/TencentSM/TencentSM-1.7.3-2/lite/source/include/: b64.h  ecp_sm2z256_macro.h  libtasn1.h  sm_jni.h  tasn1_config.h  tasn1_ctype.h  tasn1_int.h  tasn1_intprops.h  tasn1_structure.h  tc.h  tc_asn1.h  tc_digest.h  tc_ec_mul.h  tc_err.h  tc_gcm128_mode.h  tc_global.h  tc_kdf.h  tc_kms.h  tc_modes.h  tc_naf.h  tc_rand.h  tc_sha1.h  tc_sm2.h  tc_sm3.h  tc_sm4.h  tc_sm4_lcl.h  tc_str.h  tc_utils.h  tlv.h
extra/TencentSM/TencentSM-1.7.3-2/lite/source/sm2/: ecp_sm2z256.c  ecp_sm2z256_table.c  tc_ec.c  tc_ec_mul.c  tc_sm2.c
extra/TencentSM/TencentSM-1.7.3-2/lite/source/sm3/: tc_digest.c  tc_kdf.c  tc_sm3.c
extra/TencentSM/TencentSM-1.7.3-2/lite/source/sm4/: CMakeLists.txt  sm4_advance.c  tc_gcm128_mode.c  tc_modes.c  tc_sm4_cbc.c  tc_sm4_common.c  tc_sm4_ctr.c  tc_sm4_ecb.c  tc_sm4_enc.c  tc_sm4_gcm.c  tc_sm4_setkey.c
extra/TencentSM/TencentSM-1.7.3-2/lite/test/: CMakeLists.txt  sm_interface.cpp  test_ability.cpp  test_global.hpp  test_sm2_perf.cpp  test_sm2_perf.h  test_sm3_perf.cpp  test_sm3_perf.h  test_sm4_perf.cpp  test_sm4_perf.h  testmain.cpp  utils.cpp
extra/TencentSM/TencentSM-1.7.3-2/lite/test/report/: test_report.html
(+166 files in other folders)
