project(${SUB_PROJECT_NAME})
aux_source_directory(. ${SUB_PROJECT_NAME}_SRCS)

message("----------subdir:${PROJECT_NAME}------------")

#cmake var set
# set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MY_C_FLAGS}")
set(LIBRARY_OUTPUT_PATH ${SUB_LIBRARY_OUTPUT_PATH})
message(STATUS "LIBRARY_OUTPUT_PATH:${LIBRARY_OUTPUT_PATH}")
message(STATUS "CMAKE_C_FLAGS:${CMAKE_C_FLAGS}")
message(STATUS "CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
message(STATUS "CMAKE_POSITION_INDEPENDENT_CODE:${CMAKE_POSITION_INDEPENDENT_CODE}")

add_library(${PROJECT_NAME} ${SUB_CMAKE_LIB_TYPE} ${${SUB_PROJECT_NAME}_SRCS})
# target_link_libraries(${PROJECT_NAME} gmp) //子目录不需要链接，到主目录再链接
